fix layout issues, sidebar table and sidebar dynamic total cost

--- a/src/Dishes/Dishes.css
+++ b/src/Dishes/Dishes.css
@@ -1,5 +1,12 @@
 /* Cards Design inspiration:  https://dribbble.com/shots/1978243-Latest-News */
 
+.headline3{
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 .card {
     width:280px;
     display: block;
