--- a/src/SelectDish/SelectDish.css
+++ b/src/SelectDish/SelectDish.css
@@ -1,4 +1,17 @@
 .SelectDish{
+    margin-left: 60px;
+    margin-right: 35px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+}
+
+.SearchBar{
     margin-left: 5;
     margin-right: 5;
     margin-top: 5;
@@ -8,4 +21,12 @@
     padding-right: 5;
     padding-top: 5;
     padding-bottom: 5px;
+
+
+
+}
+
+
+.headline4{
+    text-align: center;
 }
